# 2048

./: README.md
projet/: CMakeLists.txt  CMakeLists.txt~  grid.c  grid.h  testgrid.c  testsdl.c
projet/README/: README.txt
projet/strat/: CMakeLists.txt  fast.c  fast.h  fast2.c  fast2.h  hard.c  hard.h  hard2.c  hard2.h  strategy.c  strategy.h  teststrat.c
projet/strat/strategies/: tournament
projet/tests/: CMakeLists.txt  testgrid1.c  testgrid2.c  testgrid3.c
rapport/: Rapport.tex
